update architecture